test/resources/manifests/hello-ingress.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-ingress
  labels:
    app.kubernetes.io/name: hello-ingress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-ingress
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-ingress
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:plain-text
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: hello-ingress
  labels:
    app.kubernetes.io/name: hello-ingress
spec:
  selector:
    app.kubernetes.io/name: hello-ingress
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-ingress
  labels:
    app.kubernetes.io/name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-ingress
                port:
                  number: 80
